; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_area.c_translateModifiers.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_area.c_translateModifiers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @translateModifiers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @translateModifiers(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = load i32, i32* %3, align 4
  store i32 %6, i32* %5, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @gdk_window_get_display(i32* %7)
  %9 = call i32 @gdk_keymap_get_for_display(i32 %8)
  %10 = call i32 @gdk_keymap_add_virtual_modifiers(i32 %9, i32* %5)
  %11 = load i32, i32* %5, align 4
  ret i32 %11
}

declare dso_local i32 @gdk_keymap_add_virtual_modifiers(i32, i32*) #1

declare dso_local i32 @gdk_keymap_get_for_display(i32) #1

declare dso_local i32 @gdk_window_get_display(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
